# taichu

./: .gitignore  AGENTS.md  README.md
app/backend/: .env.example  .gitignore  Cargo.toml  README.md
app/backend/src/: main.rs
app/backend/src/spiritkind/: mod.rs
app/backend/src/yuanling/: mod.rs
app/backend/src/yuanling/agent/: mod.rs
app/backend/src/yuanling/ai/: mod.rs
app/backend/src/yuanling/contact/: mod.rs
app/backend/src/yuanling/context/: mod.rs
app/backend/src/yuanling/mcp/: mod.rs
app/backend/src/yuanling/memory/: mod.rs
app/backend/src/yuanling/skills/: mod.rs
app/backend/src/yuanling/tools/: mod.rs
app/backend/tests/: ai_instances.rs  spiritkind.rs  tools_state.rs
app/frontend/taichu/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
app/frontend/taichu/electron/: main.js  preload.js  splash.html
app/frontend/taichu/src/: App.tsx  styles.css
app/frontend/taichu/src/api/: client.ts
app/frontend/taichu/src/components/message/: GlobalMessage.css  GlobalMessageProvider.tsx  index.ts  message.ts
app/frontend/taichu/src/pages/: AgentAiSettingsPage.css  AgentAiSettingsPage.tsx  McpSettingsPage.css  McpSettingsPage.tsx  OlympusWorkspace.css  OlympusWorkspace.tsx  SkillsSettingsPage.css  SkillsSettingsPage.tsx
app/frontend/taichu/src/types/: ai.ts  configPages.ts
docs/: PROJECT.md  frontend-message-system.md  kaiyuan.md
docs/spiritkind/: README.md
docs/yuanling/: README.md  design.md
propertypes/: agents.html  components.html  index.html  mcp.html  project.html  skills.html
